# ChangeLog for dev-perl/Gtk2-Sexy
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Gtk2-Sexy/ChangeLog,v 1.6 2009/11/23 21:27:40 tove Exp $

  23 Nov 2009; Torsten Veller <tove@gentoo.org> Gtk2-Sexy-0.05.ebuild:
  Add missing deps: ExtUtils::Depends, ExtUtils::PkgConfig (#294300)

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Gtk2-Sexy-0.02.ebuild,
  -Gtk2-Sexy-0.04.ebuild:
  Cleanup

*Gtk2-Sexy-0.05 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +Gtk2-Sexy-0.05.ebuild:
  Version bump.

*Gtk2-Sexy-0.04 (17 Dec 2008)

  17 Dec 2008; Torsten Veller <tove@gentoo.org> +Gtk2-Sexy-0.04.ebuild:
  Version bump

  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> Gtk2-Sexy-0.02.ebuild:
  Add missing pkg-config dependency. Thanks Patrick in bug #206175.

  20 Oct 2007; Christian Hartmann <ian@gentoo.org> ChangeLog:
  New package; bug #192839; original ebuild by Joel Cunningham
  <uber.leoj@gmail.com>
