@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Gtk2-Sexy
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Gtk2-Sexy/ChangeLog,v 1.6 2009/11/23 21:27:40 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Gtk2-Sexy/ChangeLog,v 1.7 2011/08/30 14:54:52 tove Exp $
+
+*Gtk2-Sexy-0.50.0 (30 Aug 2011)
+
+  30 Aug 2011; Torsten Veller <tove@gentoo.org> +Gtk2-Sexy-0.50.0.ebuild:
+  Change version scheme
 
   23 Nov 2009; Torsten Veller <tove@gentoo.org> Gtk2-Sexy-0.05.ebuild:
   Add missing deps: ExtUtils::Depends, ExtUtils::PkgConfig (#294300)
